--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,17 +23,19 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 
 # Validation
-pydantic==2.5.3
-pydantic-settings==2.1.0
-email-validator==2.1.0
+pydantic>=2.7.4
+pydantic-settings>=2.10.1
+email-validator>=2.1.0
 
 # LangChain and AI
-langchain==0.1.4
-langchain-openai==0.0.5
-langchain-community==0.0.16
-langgraph==0.0.20
-openai==1.10.0
-tiktoken==0.5.2
+# Use newer LangChain packages for compatibility with Python 3.13+ and modern deps.
+langchain>=0.2.0
+langchain-core>=0.2.0
+langchain-openai>=0.1.0
+langchain-community>=0.2.0
+langgraph>=0.0.20
+openai>=1.10.0
+tiktoken>=0.5.2
 
 # Vector Database
 chromadb==0.4.22
@@ -44,13 +46,15 @@ pdf2image==1.16.3
 Pillow==10.2.0
 
 # HTTP and Web
-httpx==0.26.0
-aiohttp==3.9.1
+httpx>=0.26.0
+aiohttp>=3.9.1
 beautifulsoup4==4.12.3
+soupsieve>=2.5
 
 # Data Processing
-pandas==2.2.0
-numpy==1.26.3
+pandas>=2.2.0
+numpy>=1.26.3
+pytz>=2024.1
 
 # Financial Data
 yfinance==0.2.35
@@ -60,12 +64,14 @@ alpha-vantage==2.3.1
 python-dotenv==1.0.0
 tenacity==8.2.3
 structlog==24.1.0
+sniffio==1.3.1
+distro==1.9.0
 
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
-httpx==0.26.0
+httpx>=0.26.0
 
 # Development
 black==24.1.1
