--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,8 @@ websockets==12.0
 
 # Database
 sqlalchemy[asyncio]==2.0.25
-asyncpg==0.29.0
-alembic==1.13.1
+asyncpg>=0.29.0
+alembic>=1.13.1
 
 # Redis
 redis==5.0.1
@@ -38,12 +38,12 @@ openai>=1.10.0
 tiktoken>=0.5.2
 
 # Vector Database
-chromadb==0.4.22
+chromadb>=0.4.22
 
 # OCR and Document Processing
 pytesseract==0.3.10
 pdf2image==1.16.3
-Pillow==10.2.0
+Pillow>=10.2.0
 
 # HTTP and Web
 httpx>=0.26.0
