--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,8 @@ python-multipart==0.0.6
 websockets==12.0
 
 # Database
-sqlalchemy[asyncio]==2.0.25
-asyncpg==0.29.0
+sqlalchemy[asyncio]>=2.0.36,<3.0.0
+asyncpg>=0.30.0
 alembic==1.13.1
 
 # Redis
@@ -29,11 +29,11 @@ email-validator>=2.1.0
 
 # LangChain and AI
 # Use newer LangChain packages for compatibility with Python 3.13+ and modern deps.
-langchain>=0.2.0
-langchain-core>=0.2.0
-langchain-openai>=0.1.0
-langchain-community>=0.2.0
-langgraph>=0.0.20
+langchain>=0.2.0,<1.0.0
+langchain-core>=0.2.0,<1.0.0
+langchain-openai>=0.1.0,<1.0.0
+langchain-community>=0.2.0,<1.0.0
+langgraph==1.0.1
 openai>=1.10.0
 tiktoken>=0.5.2
 
@@ -43,7 +43,7 @@ chromadb==0.4.22
 # OCR and Document Processing
 pytesseract==0.3.10
 pdf2image==1.16.3
-Pillow==10.2.0
+Pillow>=11.0.0
 
 # HTTP and Web
 httpx>=0.26.0
